Reducing font size of the new tagline on the homepage to fix alignment issue due to text being too wide when "Lightweight" replaced "Secure".

--- a/wp-content/themes/classicpress-susty-child/style.css
+++ b/wp-content/themes/classicpress-susty-child/style.css
@@ -1749,7 +1749,7 @@ footer#legal {
 
 .home-hero-text h3 {
 	margin-top: 0;
-	font-size: 1.7em;
+	font-size: 1.5em;
 }
 
 .home-hero-image {
